--- a/dom/settings/tests/test_settings_basics.html
+++ b/dom/settings/tests/test_settings_basics.html
@@ -25,6 +25,9 @@ if (SpecialPowers.isMainProcess()) {
   SpecialPowers.Cu.import("resource://gre/modules/SettingsChangeNotifier.jsm");
 }
 
+SpecialPowers.addPermission("settings-read", true, document);
+SpecialPowers.addPermission("settings-write", true, document);
+
 function onUnwantedSuccess() {
   ok(false, "onUnwantedSuccess: shouldn't get here");
 }
@@ -93,7 +96,7 @@ function check(o1, o2) {
 var req, req2, req3, req4, req5, req6;
 var index = 0;
 
-var mozSettings;
+var mozSettings = navigator.mozSettings;
 
 var steps = [
   function () {
@@ -779,15 +782,7 @@ function next() {
 }
 
 SimpleTest.waitForExplicitFinish();
-is(navigator.mozSettings, null, "navigator.mozSettings is null when the page doesn't have permissions");
-SpecialPowers.pushPermissions([
-  {"type": "settings-read", "allow": 1, "context": document},
-  {"type": "settings-write", "allow": 1, "context": document}
-], function() {
-  mozSettings = navigator.mozSettings;
-  ok(navigator.mozSettings instanceof SettingsManager, "navigator.mozSettings is SettingsManager when the page has permissions");
-  SimpleTest.executeSoon(next);
-});
+addLoadEvent(next);
 </script>
 </pre>
 </body>
